--- a/dashboard.html
+++ b/dashboard.html
@@ -104,8 +104,17 @@ body{font-family:'DM Sans',sans-serif;background:var(--off);color:var(--text);mi
 @media(max-width:768px){
   .sidebar{transform:translateX(-100%)}
   .sidebar.open{transform:translateX(0)}
+  .sidebar-overlay.open{display:block}
   .main{margin-left:0!important}
+  .menu-btn{display:flex!important}
+  .topbar-date{display:none}
+  .desktop-table{display:none}
+  .m-card{display:block}
   .row-actions{opacity:1}
+  .stats{grid-template-columns:1fr 1fr}
+  .grid2{grid-template-columns:1fr}
+  .content{padding:14px}
+  .topbar{padding:0 14px}
 }
 @media(max-width:400px){.stats{grid-template-columns:1fr}.stat-val{font-size:28px}}
 
